kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: count-app
  labels:
    app: count-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: count-app
  template:
    metadata:
      labels:
        app: count-app
    spec:
      containers:
      - name: count-app
        image: ghcr.io/DulithKavinda/devsecops-pipeline-counterapp:sha-0e5eb69cd1ac4c3fdef42d741d9e35e52aa0706b
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
      imagePullSecrets:
      - name: github-container-registry
