kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: count-app
  labels:
    app: count-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: count-app
